--- a/PlanFort/PlanFort/Views/Home/ViewTrips.cshtml
+++ b/PlanFort/PlanFort/Views/Home/ViewTrips.cshtml
@@ -74,7 +74,7 @@
                     </li>
                 }
             }
-            <li><a asp-controller="Business" asp-action="BusinessFormResult" asp-route-city="@trip.City" asp-route-TripId="@trip.TripID">Add Business</a></li>
+            <li><a asp-controller="Business" asp-action="BusinessForm" asp-route-city="@trip.City" asp-route-TripId="@trip.TripID">Add Business</a></li>
 
 
         
